--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bootloader_SDIO_STM32F407VET6]
+[env:SDIO_STM32F103ZET6_BLACK ]
 platform = ststm32
-board = black_f407ve
+board = STM32F103ZE
 framework = stm32cube
-board_build.ldscript = STM32F407VETX_FLASH.ld
+board_build.ldscript = STM32F103ZETX_FLASH.ld
 
 build_flags =
     -I src/Core
