--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:SDIO_STM32F103ZET6_BLACK ]
 platform = ststm32
-board = STM32F103ZE
+board = genericSTM32F103ZE
 framework = stm32cube
 board_build.ldscript = STM32F103ZETX_FLASH.ld
 
