fits!  100% functional - move to VSCode

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:SDIO_STM32F103ZET6_BLACK ]
+[env:genericSTM32F103ZE]
 platform = ststm32
 board = genericSTM32F103ZE
-framework = stm32cube
+#framework = stm32cube
+framework = cmsis
 board_build.ldscript = STM32F103ZETX_FLASH.ld
 
 build_flags =
@@ -19,18 +20,18 @@ build_flags =
     -I src/Core/Inc
     -I src/Core/Src
     -I src/Core/Startup
-#    -I src/Drivers
-#    -I src/Drivers/CMSIS
-#    -I src/Drivers/CMSIS/Device
-#    -I src/Drivers/CMSIS/Device/ST
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx/Include
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx/Source
-#    -I src/Drivers/CMSIS/Include
-#    -I src/Drivers/STM32F4xx_HAL_Driver
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Inc
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Src
+    -I src/Drivers
+    -I src/Drivers/CMSIS
+    -I src/Drivers/CMSIS/Device
+    -I src/Drivers/CMSIS/Device/ST
+    -I src/Drivers/CMSIS/Device/ST/STM32F1xx
+    -I src/Drivers/CMSIS/Device/ST/STM32F1xx/Include
+    -I src/Drivers/CMSIS/Device/ST/STM32F1xx/Source
+    -I src/Drivers/CMSIS/Include
+    -I src/Drivers/STM32F1xx_HAL_Driver
+    -I src/Drivers/STM32F1xx_HAL_Driver/Inc
+    -I src/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy
+    -I src/Drivers/STM32F1xx_HAL_Driver/Src
     -I src/FATFS
     -I src/FATFS/App
     -I src/FATFS/Target
@@ -38,6 +39,7 @@ build_flags =
     -I src/Middlewares/Third_Party
     -I src/Middlewares/Third_Party/FatFs
     -I src/Middlewares/Third_Party/FatFs/src
+    -I src/Middlewares/Third_Party/FatFs/src/drivers
     -I src/Middlewares/Third_Party/FatFs/src/option
     -I src/stm32-bootloader
     -g3
