--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/poi_project/SDIO_STM32F103ZE_Black/.pio/build/genericSTM32F103ZE/firmware.elf",
+            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/.pio/build/genericSTM32F103ZE/firmware.elf",
             "projectEnvName": "genericSTM32F103ZE",
-            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/bobku/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
             "preLaunchTask": {
@@ -26,9 +26,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/poi_project/SDIO_STM32F103ZE_Black/.pio/build/genericSTM32F103ZE/firmware.elf",
+            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/.pio/build/genericSTM32F103ZE/firmware.elf",
             "projectEnvName": "genericSTM32F103ZE",
-            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/bobku/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd"
         },
@@ -36,9 +36,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/poi_project/SDIO_STM32F103ZE_Black/.pio/build/genericSTM32F103ZE/firmware.elf",
+            "executable": "C:/work/temp/bootloader_platformio/bootloader_SDIO/.pio/build/genericSTM32F103ZE/firmware.elf",
             "projectEnvName": "genericSTM32F103ZE",
-            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi/bin",
+            "toolchainBinDir": "C:/Users/bobku/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/bobku/.platformio/platforms/ststm32/misc/svd/STM32F103xx.svd",
             "loadMode": "manual"
