jump to app now goes through reset
moved the custom bootloader in and modified the jump to app accordingly

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = ststm32
 board = black_f407ve
 framework = stm32cube
+#framework = cmsis  #  image is bigger
 board_build.ldscript = STM32F407VETX_FLASH.ld
 
 build_flags =
