--- a/platformio.ini
+++ b/platformio.ini
@@ -8,30 +8,32 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bootloader_SDIO_STM32F407VET6]
+[env:bootloader_SDIO_STM32F746ZGTX]
 platform = ststm32
-board = black_f407ve
+board    = nucleo_f746zg
+board_build.offset          = 0x0000
+board_upload.offset_address = 0x08000000
 framework = stm32cube
 #framework = cmsis  #  image is bigger
-board_build.ldscript = STM32F407VETX_FLASH.ld
+board_build.ldscript = STM32F746ZGTX_FLASH.ld
 
 build_flags =
     -I src/Core
     -I src/Core/Inc
     -I src/Core/Src
     -I src/Core/Startup
-#    -I src/Drivers
-#    -I src/Drivers/CMSIS
-#    -I src/Drivers/CMSIS/Device
-#    -I src/Drivers/CMSIS/Device/ST
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx/Include
-#    -I src/Drivers/CMSIS/Device/ST/STM32F4xx/Source
-#    -I src/Drivers/CMSIS/Include
-#    -I src/Drivers/STM32F4xx_HAL_Driver
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Inc
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
-#    -I src/Drivers/STM32F4xx_HAL_Driver/Src
+   # -I src/Drivers
+   # -I src/Drivers/CMSIS
+   # -I src/Drivers/CMSIS/Device
+   # -I src/Drivers/CMSIS/Device/ST
+   # -I src/Drivers/CMSIS/Device/ST/STM32F7xx
+   # -I src/Drivers/CMSIS/Device/ST/STM32F7xx/Include
+   # -I src/Drivers/CMSIS/Device/ST/STM32F7xx/Source
+   # -I src/Drivers/CMSIS/Include
+   # -I src/Drivers/STM32F7xx_HAL_Driver
+   # -I src/Drivers/STM32F7xx_HAL_Driver/Inc
+   # -I src/Drivers/STM32F7xx_HAL_Driver/Inc/Legacy
+   # -I src/Drivers/STM32F7xx_HAL_Driver/Src
     -I src/FATFS
     -I src/FATFS/App
     -I src/FATFS/Target
